--- a/kwordle/package.json
+++ b/kwordle/package.json
@@ -38,6 +38,7 @@
     "mime": "^1.6.0",
     "mime-db": "^1.52.0",
     "mime-types": "^2.1.35",
+    "mongodb": "^6.3.0",
     "ms": "^2.0.0",
     "negotiator": "^0.6.3",
     "object-inspect": "^1.12.2",
